dev-yc-sirius/edu-jovial-mclean/k8s-django-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django-app
    tier: django
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-k8s
  template:
    metadata:
      labels:
        app: django-k8s
    spec:
      containers:
        - name: django-app
          image: srgmarkov/k8s_django_app:latest
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
---

apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django-k8s
  type: NodePort
  ports:
    - name: traffic-service
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort : 30381
