dev-yc-sirius/edu-jovial-mclean/k8s-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: edu-jovial-mclean
spec:
  ingressClassName: nginx
  rules:
  - host: edu-jovial-mclean.sirius-k8s.dvmn.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-service
            port:
              number: 80
